--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,53 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TempMail</title>
+  <title>TempMail - Free Temporary Email Service | Disposable Email Address</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Get free temporary email addresses instantly. Our disposable email service protects your privacy and keeps your inbox spam-free. No registration required.">
+  <meta name="keywords" content="temporary email, disposable email, free email, anonymous email, spam protection, fake email, burner email">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#ffffff">
+  
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:title" content="TempMail - Free Temporary Email Service">
+  <meta property="og:description" content="Get free temporary email addresses instantly. Protect your privacy with our disposable email service.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tempmail4u.com">
+  <meta property="og:site_name" content="TempMail">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="TempMail - Free Temporary Email Service">
+  <meta name="twitter:description" content="Get free temporary email addresses instantly. Protect your privacy with our disposable email service.">
+
+  
+  <!-- Favicon and App Icons -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-   <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://tempmail4u.com">
+  
+  <!-- Structured Data / Schema Markup -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "TempMail",
+      "description": "Free temporary email service providing disposable email addresses",
+      "url": "https://tempmail4u.com",
+      "applicationCategory": "UtilityApplication",
+      "operatingSystem": "Web",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      }
+    }
+  </script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
