--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,21 @@
   <meta name="keywords" content="temporary email, disposable email, free email, anonymous email, spam protection, fake email, burner email">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#ffffff">
+
+  <!-- Alternate language SEO links -->
+  <link rel="alternate" hreflang="en" href="https://tempmail4u.com/" />
+  <link rel="alternate" hreflang="ar" href="https://tempmail4u.com/ar" />
+  <link rel="alternate" hreflang="fr" href="https://tempmail4u.com/fr" />
+  <link rel="alternate" hreflang="es" href="https://tempmail4u.com/es" />
+  <link rel="alternate" hreflang="de" href="https://tempmail4u.com/de" />
+  <link rel="alternate" hreflang="zh" href="https://tempmail4u.com/zh" />
+  <!--
+  <link rel="alternate" hreflang="ru" href="https://tempmail4u.com/ru" />
+  <link rel="alternate" hreflang="hi" href="https://tempmail4u.com/hi" />
+  <link rel="alternate" hreflang="pt" href="https://tempmail4u.com/pt" />
+  <link rel="alternate" hreflang="ja" href="https://tempmail4u.com/ja" />
+  ... (add more as needed)
+  -->
   
   <!-- Open Graph / Social Media Meta Tags -->
   <meta property="og:title" content="TempMail - Free Temporary Email Service">
