--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,27 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" i18n-lang="@@htmlLang" dir="ltr" i18n-dir="@@htmlDir">
 <head>
   <meta charset="utf-8">
-  <title>TempMail - Free Temporary Email Service | Disposable Email Address</title>
+  <title i18n="@@metaTitle">TempMail: Free Temporary Email, Disposable & Anonymous Email Service</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Get free temporary email addresses instantly. Our disposable email service protects your privacy and keeps your inbox spam-free. No registration required.">
+  <meta name="description" i18n="@@metaDescription" content="TempMail provides free, secure, and anonymous temporary email addresses. Protect your privacy, avoid spam, and sign up anywhere without revealing your real email. No registration required.">
   <meta name="keywords" content="temporary email, disposable email, free email, anonymous email, spam protection, fake email, burner email">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#ffffff">
   
   <!-- Open Graph / Social Media Meta Tags -->
-  <meta property="og:title" content="TempMail - Free Temporary Email Service">
-  <meta property="og:description" content="Get free temporary email addresses instantly. Protect your privacy with our disposable email service.">
+  <meta property="og:title" i18n="@@ogTitle" content="TempMail: Free Temporary Email, Disposable & Anonymous Email Service">
+  <meta property="og:description" i18n="@@ogDescription" content="TempMail provides free, secure, and anonymous temporary email addresses. Protect your privacy, avoid spam, and sign up anywhere without revealing your real email. No registration required.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://tempmail4u.com">
   <meta property="og:site_name" content="TempMail">
   
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="TempMail - Free Temporary Email Service">
-  <meta name="twitter:description" content="Get free temporary email addresses instantly. Protect your privacy with our disposable email service.">
+  <meta name="twitter:title" i18n="@@twitterTitle" content="TempMail: Free Temporary Email, Disposable & Anonymous Email Service">
+  <meta name="twitter:description" i18n="@@twitterDescription" content="TempMail provides free, secure, and anonymous temporary email addresses. Protect your privacy, avoid spam, and sign up anywhere without revealing your real email. No registration required.">
 
-  
   <!-- Favicon and App Icons -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
