--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -92,7 +92,7 @@
         <!-- Footer -->
         <div class="footer">
             <a id="openFullSite" style="cursor: pointer;" target="_blank" class="footer-link">
-                Open Full Site
+                Open Inbng ox In Web View
             </a>
         </div>
     </div>
