--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,48 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>TempMail - Free Temporary Email Service | Disposable Email Address</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Get free temporary email addresses instantly. Our disposable email service protects your privacy and keeps your inbox spam-free. No registration required.">
-  <meta name="keywords" content="temporary email, disposable email, free email, anonymous email, spam protection, fake email, burner email">
+  <meta name="description"
+    content="Get free temporary email addresses instantly. Our disposable email service protects your privacy and keeps your inbox spam-free. No registration required.">
+  <meta name="keywords"
+    content="temporary email, disposable email, free email, anonymous email, spam protection, fake email, burner email">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#ffffff">
-  
+
   <!-- Open Graph / Social Media Meta Tags -->
   <meta property="og:title" content="TempMail - Free Temporary Email Service">
-  <meta property="og:description" content="Get free temporary email addresses instantly. Protect your privacy with our disposable email service.">
+  <meta property="og:description"
+    content="Get free temporary email addresses instantly. Protect your privacy with our disposable email service.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://tempmail4u.com">
   <meta property="og:site_name" content="TempMail">
-  
+
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="TempMail - Free Temporary Email Service">
-  <meta name="twitter:description" content="Get free temporary email addresses instantly. Protect your privacy with our disposable email service.">
+  <meta name="twitter:description"
+    content="Get free temporary email addresses instantly. Protect your privacy with our disposable email service.">
 
-  
+
   <!-- Favicon and App Icons -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
-  
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HK61KXLF77"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-HK61KXLF77');
+  </script>
+
   <!-- Structured Data / Schema Markup -->
   <script type="application/ld+json">
     {
@@ -47,7 +61,9 @@
     }
   </script>
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+
 </html>
