--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,30 @@
   <link rel="manifest" href="site.webmanifest">
 
   <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HK61KXLF77"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-HK61KXLF77"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-HK61KXLF77');
-  </script>
+  </script> -->
+
+  <script>
+  if (window.location.hostname !== 'localhost') {
+    var gaScript = document.createElement('script');
+    gaScript.async = true;
+    gaScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-HK61KXLF77';
+    document.head.appendChild(gaScript);
+
+    gaScript.onload = function () {
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'G-HK61KXLF77');
+    };
+  }
+</script>
+
 
   <!-- Structured Data / Schema Markup -->
   <script type="application/ld+json">
