--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,20 @@
       }
     }
   </script>
+
+
+  <a title="GDPR-compliant Web Analytics" href="https://clicky.com/101491490"><img style="display: none;" alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script>
+var clicky_site_id = 101491490;
+(function() {
+	var s = document.createElement('script');
+	s.type = 'text/javascript';
+	s.async = true;
+	s.src = '//static.getclicky.com/js';
+	( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
+})();
+</script>
+<noscript><p><img style="display: none;" alt="Clicky" width="1" height="1" src="//in.getclicky.com/101491490ns.gif" /></p></noscript>
 </head>
 
 <body class="mat-typography">
