--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
   <!-- Google Tag Manager -->
   <script>
 
-    if (window.location.hostname !== 'localhost') {
+    // if (window.location.hostname !== 'localhost') {
       (function (w, d, s, l, i) {
         w[l] = w[l] || []; w[l].push({
           'gtm.start':
@@ -57,7 +57,7 @@
             'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
       })(window, document, 'script', 'dataLayer', 'GTM-K6FLVVZQ');
 
-    }
+    // }
   </script>
   <!-- End Google Tag Manager -->
 
