--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="google-adsense-account" content="ca-pub-2438434508881500">
   <title>TempMail - Free Temporary Email Service | Disposable Email Address</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,6 +28,8 @@
   <meta name="twitter:description"
     content="Get free temporary email addresses instantly. Protect your privacy with our disposable email service.">
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2438434508881500"
+          crossorigin="anonymous"></script>
 
   <!-- Favicon and App Icons -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
